--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>2024 帶人的技術：5/31 教練領導學 x 6/28 關鍵指導力</title>
+        <link
+            rel="icon"
+            href="/assets/favicon/favicon-32x32.png"
+            type="image/x-icon"
+        />
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
@@ -21,7 +26,15 @@
                 <li>課程資訊</li>
                 <li>常見問題</li>
                 <li>課程團票</li>
-                <li>立即報名</li>
+                <li>
+                    <a
+                        href="https://eventgo.bnextmedia.com.tw/event/view/e11241u6576af709b72d/?_ga=2.246930503.255895828.1712984664-100655867.1712984662&_gl=1*1sifkwe*_ga*MTAwNjU1ODY3LjE3MTI5ODQ2NjI.*_ga_LJQ58J2DG7*MTcxMzEwMjQ2MC44LjEuMTcxMzEwNDEzNi42MC4wLjA.*_ga_383SSRZR6Z*MTcxMzEwMjQ2MC43LjAuMTcxMzEwMjQ2NC41Ni4wLjA.*_ga_G9MHY2DC1W*MTcxMzEwMjQ2MC43LjAuMTcxMzEwMjQ2NC4wLjAuMA.."
+                        target="_blank"
+                        rel="noreferrer noopener"
+                    >
+                        立即報名
+                    </a>
+                </li>
                 <li><img src="/assets/fb.png" alt="" /></li>
             </ul>
         </nav>
@@ -44,7 +57,8 @@
                     一個卓越的領導者靠的絕不是頭銜，而是懂得用對方法，持續累積經驗，和團隊一起變強！
                 </p>
                 <p>
-                    帶人的技術課程連續 7 年好評開課，系統化拆解 1 對 1 指導重點，有效帶出得力部屬！
+                    帶人的技術課程連續 7 年好評開課，系統化拆解 1 對 1
+                    指導重點，有效帶出得力部屬！
                 </p>
             </div>
             <div class="feedback">
@@ -73,6 +87,181 @@
                 <div class="recomm-cards">
                     <h3>企業經營者</h3>
                     <p>透過有效的溝通與步驟，<br />讓團隊主動成長</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="agenda">
+            <header class="section-header">
+                <h2>精彩課綱</h2>
+                <h3><em>- Agenda -</em></h3>
+            </header>
+            <article>
+                <div class="agd-btn-box">
+                    <a href="javascript:void(0);">
+                        <p>
+                            <span>05.31 FRI.</span>
+                            9:30 ~ 17:00
+                        </p>
+                        <h2>教練領導學</h2>
+                    </a>
+                    <a href="javascript:void(0);">
+                        <p>
+                            <span>06.28 FRI. </span>
+                            9:30 ~ 17:00
+                        </p>
+                        <h2>關鍵指導力</h2>
+                    </a>
+                </div>
+                <div class="agd-highlight">
+                    <p>資深員工帶不動、新手員工教不會？</p>
+                    <p>用教練方法讓他們自主動起來</p>
+                </div>
+                <div class="agd-content">
+                    <div class="agd-content-box">
+                        <figure>
+                            <figcaption>教練式領導力</figcaption>
+                            <ul>
+                                <li>教練領導對話關鍵：影響力三要素</li>
+                                <li>激發潛能的教練式領導：瞭解核心價值觀</li>
+                                <li>部屬需要教練式領導的時機：激勵三部曲</li>
+                            </ul>
+                        </figure>
+                        <figure>
+                            <figcaption>教練式領導四流程</figcaption>
+                            <ul>
+                                <li>了解部屬狀態：融入與抽離的提問技巧</li>
+                                <li>建立信賴關係：同理心訓練＋自我表露技術</li>
+                                <li>釐清問題核心：有效溝通的深度探詢</li>
+                                <li>持續成長動能：引導改變的策略</li>
+                            </ul>
+                        </figure>
+                    </div>
+                    <div class="agd-content-img">
+                        <img
+                            src="/assets/agenda-four.svg"
+                            alt="教練式領導四流程"
+                        />
+                    </div>
+                </div>
+            </article>
+        </section>
+        <section class="key-caps">
+            <h2>頂尖領導者必備的4大關鍵能力</h2>
+            <div class="key-caps-box">
+                <div class="key-caps-cards">
+                    <img src="/assets/key-caps-1.svg" alt="領導情境解析" />
+                    <h3>領導情境解析</h3>
+                    <p>拆解常見團隊難題</p>
+                </div>
+                <div class="key-caps-cards">
+                    <img src="/assets/key-caps-2.svg" alt="精準溝通策略" />
+                    <h3>精準溝通策略</h3>
+                    <p>掌握傾聽與提問技巧</p>
+                </div>
+                <div class="key-caps-cards">
+                    <img src="/assets/key-caps-3.svg" alt="對話實戰演練" />
+                    <h3>對話實戰演練</h3>
+                    <p>模擬腳本+情境對話</p>
+                </div>
+                <div class="key-caps-cards">
+                    <img src="/assets/key-caps-4.svg" alt=" 影響力主管 " />
+                    <h3>影響力主管</h3>
+                    <p>帶領團隊持續成長、創造績效</p>
+                </div>
+            </div>
+        </section>
+        <section class="about-lesson">
+            <article>
+                <h2>課程重點搶先看</h2>
+                <!-- width="560"
+                    height="315" -->
+                <iframe
+                    src="https://www.youtube-nocookie.com/embed/aQNPdGgZkJA?si=exboPfRxUhRZMIMQ"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin"
+                    allowfullscreen
+                ></iframe>
+            </article>
+            <article>
+                <header class="section-header">
+                    <h2>講師介紹</h2>
+                    <h3><em>- Speaker -</em></h3>
+                </header>
+                <img
+                    src="/assets/speaker.png"
+                    alt="講師陳煥庭的介紹：起初國際台灣分公司執行長"
+                />
+            </article>
+        </section>
+        <section class="lesson-info" id="lesson-info">
+            <header class="section-header">
+                <h2>課程資訊</h2>
+                <h3><em>- Course -</em></h3>
+            </header>
+            <div class="lesson-info-box">
+                <p>活動日期：05.31 (五)、06.28 (五)； 09:30 ~ 17:00</p>
+                <p>
+                    活動地點：張榮發基金會國際會議中心
+                    <small>（臺北市中正區中山南路11號）</small>
+                </p>
+                <p>票價費用：</p>
+                <div class="lesson-price-box">
+                    <div class="lesson-price-cards">
+                        <h4>雙日報名最優惠</h4>
+                        <span>NT.<strong>8,000</strong>/人</span>
+                    </div>
+                    <div class="lesson-price-cards">
+                        <h4>單日‧早鳥優惠</h4>
+                        <span>NT.<strong>4,320</strong>/人</span>
+                    </div>
+                    <div class="lesson-price-cards">
+                        <h4>單日‧3人以上團報</h4>
+                        <span>NT.<strong>4,000</strong>/人</span>
+                    </div>
+                    <div class="lesson-price-cards">
+                        <h4>單日‧一般票</h4>
+                        <span>NT.<strong>4,980</strong>/人</span>
+                    </div>
+                </div>
+                <div class="lesson-price-ps">
+                    <h3>
+                        【 05.31教練領導學 : 早鳥為05.23前 / 06.28關鍵指導力 :
+                        早鳥為06.20前 】
+                    </h3>
+                    <p>
+                        ※
+                        本課程附教材、午餐並加贈《經理人月刊》6期，2024年7月號起算
+                    </p>
+                </div>
+                <div class="lesson-btn-box">
+                    <a
+                        href="https://eventgo.bnextmedia.com.tw/event/view/e11241u6576af709b72d/?_ga=2.246930503.255895828.1712984664-100655867.1712984662&_gl=1*1sifkwe*_ga*MTAwNjU1ODY3LjE3MTI5ODQ2NjI.*_ga_LJQ58J2DG7*MTcxMzEwMjQ2MC44LjEuMTcxMzEwNDEzNi42MC4wLjA.*_ga_383SSRZR6Z*MTcxMzEwMjQ2MC43LjAuMTcxMzEwMjQ2NC41Ni4wLjA.*_ga_G9MHY2DC1W*MTcxMzEwMjQ2MC43LjAuMTcxMzEwMjQ2NC4wLjAuMA.."
+                        target="_blank"
+                        rel="noreferrer noopener"
+                    >
+                        立即報名
+                    </a>
+                </div>
+                <div class="lesson-details">
+                    <p>活動洽詢：02-8773-9808</p>
+                    <br />
+                    <p>
+                        報名與票券洽詢：anna.chi@bnext.com.tw｜分機 351
+                        紀小姐；karen.yang@managertoday.com.tw｜分機 355 楊小姐
+                    </p>
+                    <p>
+                        活動內容洽詢：yijing.huang@bnext.com.tw｜分機 327 黃小姐
+                    </p>
+                    <p>
+                        主辦單位保留活動及課程大綱異動之權利，更新資訊以活動網站內容為主。
+                    </p>
+                    <p>
+                        客服專線：02-8771-6326
+                        &emsp;服務時間：週一到週五9:30~12:00；13:30~17:00
+                    </p>
                 </div>
             </div>
         </section>
