回到最上鈕＆頁尾

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
                 <li><img src="/assets/fb.png" alt="" /></li>
             </ul>
         </nav>
-
+        <div class="to-the-top">
+            <div class="arrow"></div>
+        </div>
         <header>
             <img src="/assets/web_header.png" alt="" />
             <img
@@ -265,5 +267,51 @@
                 </div>
             </div>
         </section>
+        <section class="empty"></section>
+        <footer>
+            <p>
+                <strong>Bnext Media 媒體群</strong>
+                <b>|</b>
+                <span
+                    ><a
+                        href="https://www.bnext.com.tw/?_ga=2.146564081.454394998.1712984664-100655867.1712984662&_gl=1*17nqxne*_ga*MTAwNjU1ODY3LjE3MTI5ODQ2NjI.*_ga_LJQ58J2DG7*MTcxMzEwMjQ2MC44LjEuMTcxMzEwNDEzNi42MC4wLjA."
+                    >數位時代</a
+                    ></span
+                >
+                <span
+                    ><a
+                        href="https://www.managertoday.com.tw/?_ga=2.146564081.454394998.1712984664-100655867.1712984662&_gl=1*17nqxne*_ga*MTAwNjU1ODY3LjE3MTI5ODQ2NjI.*_ga_LJQ58J2DG7*MTcxMzEwMjQ2MC44LjEuMTcxMzEwNDEzNi42MC4wLjA."
+                        target="_blank"
+                        rel="noreferrer noopener"
+                    >經理人</a
+                    ></span
+                >
+                <span
+                    ><a
+                        href="https://www.shoppingdesign.com.tw/?_gl=1*17nqxne*_ga*MTAwNjU1ODY3LjE3MTI5ODQ2NjI.*_ga_LJQ58J2DG7*MTcxMzEwMjQ2MC44LjEuMTcxMzEwNDEzNi42MC4wLjA."
+                        target="_blank"
+                        rel="noreferrer noopener"
+                    >Shopping Design</a
+                    ></span
+                >
+                <span
+                    ><a
+                        href="https://meet.bnext.com.tw/?_gl=1*17nqxne*_ga*MTAwNjU1ODY3LjE3MTI5ODQ2NjI.*_ga_LJQ58J2DG7*MTcxMzEwMjQ2MC44LjEuMTcxMzEwNDEzNi42MC4wLjA."
+                        target="_blank"
+                        rel="noreferrer noopener"
+                    >創業小聚</a
+                    ></span
+                >
+                <span
+                    ><a
+                        href="https://fc.bnext.com.tw/?_gl=1*17nqxne*_ga*MTAwNjU1ODY3LjE3MTI5ODQ2NjI.*_ga_LJQ58J2DG7*MTcxMzEwMjQ2MC44LjEuMTcxMzEwNDEzNi42MC4wLjA."
+                        target="_blank"
+                        rel="noreferrer noopener"
+                    >未來商務</a
+                    ></span
+                >
+            </p>
+            <p class="copyright">&copy; 2024 Business Next Media Corp. All Rights Reserved. 106 台北市大安區光復南路102號9樓 </p>
+        </footer>
     </body>
 </html>
