修正部分地方

--- a/index.html
+++ b/index.html
@@ -75,6 +75,18 @@
                     </p>
                     <span>關鍵指導力/資通訊服務業/中高階主管</span>
                 </div>
+                <div class="recomm-carousel-inticator-wrap">
+                    <div class="recomm-carousel-inticators"></div>
+                    <div class="recomm-carousel-inticators"></div>
+                    <div class="recomm-carousel-inticators"></div>
+                    <div class="recomm-carousel-inticators"></div>
+                    <div class="recomm-carousel-inticators"></div>
+                    <div class="recomm-carousel-inticators"></div>
+                    <div class="recomm-carousel-inticators"></div>
+                    <div class="recomm-carousel-inticators"></div>
+                    <div class="recomm-carousel-inticators"></div>
+                </div>
+
             </div>
             <div>
                 <h2>這堂課<br />適合誰？</h2>
@@ -120,6 +132,12 @@
                     <p>用教練方法讓他們自主動起來</p>
                 </div>
                 <div class="agd-content">
+                    <div class="agd-content-img">
+                        <img
+                        src="/assets/agenda-four.svg"
+                        alt="教練式領導四流程"
+                        />
+                    </div>
                     <div class="agd-content-box">
                         <figure>
                             <figcaption>教練式領導力</figcaption>
@@ -138,12 +156,6 @@
                                 <li>持續成長動能：引導改變的策略</li>
                             </ul>
                         </figure>
-                    </div>
-                    <div class="agd-content-img">
-                        <img
-                            src="/assets/agenda-four.svg"
-                            alt="教練式領導四流程"
-                        />
                     </div>
                 </div>
             </article>
