nav上連結，及其樣式

--- a/index.html
+++ b/index.html
@@ -22,10 +22,24 @@
                     alt="新商業學校 經理人 首頁連結"
             /></a>
             <ul class="nav-box">
-                <li>精彩課綱</li>
-                <li>課程資訊</li>
-                <li>常見問題</li>
-                <li>課程團票</li>
+                <li>
+                    <a href="#agenda"> 精彩課綱</a>
+                </li>
+                <li>
+                    <a href="#lesson-info"> 課程資訊</a>
+                </li>
+                <li>
+                    <a href="#"> 常見問題</a>
+                </li>
+                <li>
+                    <a
+                        href="https://school.bnextmedia.com.tw/groupticket/?utm_source=web_mt&utm_medium=rwd&utm_campaign=2024q2lead"
+                        target="_blank"
+                        rel="noreferrer noopener"
+                    >
+                        課程團票
+                    </a>
+                </li>
                 <li>
                     <a
                         href="https://eventgo.bnextmedia.com.tw/event/view/e11241u6576af709b72d/?_ga=2.246930503.255895828.1712984664-100655867.1712984662&_gl=1*1sifkwe*_ga*MTAwNjU1ODY3LjE3MTI5ODQ2NjI.*_ga_LJQ58J2DG7*MTcxMzEwMjQ2MC44LjEuMTcxMzEwNDEzNi42MC4wLjA.*_ga_383SSRZR6Z*MTcxMzEwMjQ2MC43LjAuMTcxMzEwMjQ2NC41Ni4wLjA.*_ga_G9MHY2DC1W*MTcxMzEwMjQ2MC43LjAuMTcxMzEwMjQ2NC4wLjAuMA.."
@@ -86,7 +100,6 @@
                     <div class="recomm-carousel-inticators"></div>
                     <div class="recomm-carousel-inticators"></div>
                 </div>
-
             </div>
             <div>
                 <h2>這堂課<br />適合誰？</h2>
@@ -105,7 +118,7 @@
             </div>
         </section>
 
-        <section class="agenda">
+        <section class="agenda" id="agenda">
             <header class="section-header">
                 <h2>精彩課綱</h2>
                 <h3><em>- Agenda -</em></h3>
@@ -134,8 +147,8 @@
                 <div class="agd-content">
                     <div class="agd-content-img">
                         <img
-                        src="/assets/agenda-four.svg"
-                        alt="教練式領導四流程"
+                            src="/assets/agenda-four.svg"
+                            alt="教練式領導四流程"
                         />
                     </div>
                     <div class="agd-content-box">
@@ -287,7 +300,7 @@
                 <span
                     ><a
                         href="https://www.bnext.com.tw/?_ga=2.146564081.454394998.1712984664-100655867.1712984662&_gl=1*17nqxne*_ga*MTAwNjU1ODY3LjE3MTI5ODQ2NjI.*_ga_LJQ58J2DG7*MTcxMzEwMjQ2MC44LjEuMTcxMzEwNDEzNi42MC4wLjA."
-                    >數位時代</a
+                        >數位時代</a
                     ></span
                 >
                 <span
@@ -295,7 +308,7 @@
                         href="https://www.managertoday.com.tw/?_ga=2.146564081.454394998.1712984664-100655867.1712984662&_gl=1*17nqxne*_ga*MTAwNjU1ODY3LjE3MTI5ODQ2NjI.*_ga_LJQ58J2DG7*MTcxMzEwMjQ2MC44LjEuMTcxMzEwNDEzNi42MC4wLjA."
                         target="_blank"
                         rel="noreferrer noopener"
-                    >經理人</a
+                        >經理人</a
                     ></span
                 >
                 <span
@@ -303,7 +316,7 @@
                         href="https://www.shoppingdesign.com.tw/?_gl=1*17nqxne*_ga*MTAwNjU1ODY3LjE3MTI5ODQ2NjI.*_ga_LJQ58J2DG7*MTcxMzEwMjQ2MC44LjEuMTcxMzEwNDEzNi42MC4wLjA."
                         target="_blank"
                         rel="noreferrer noopener"
-                    >Shopping Design</a
+                        >Shopping Design</a
                     ></span
                 >
                 <span
@@ -311,7 +324,7 @@
                         href="https://meet.bnext.com.tw/?_gl=1*17nqxne*_ga*MTAwNjU1ODY3LjE3MTI5ODQ2NjI.*_ga_LJQ58J2DG7*MTcxMzEwMjQ2MC44LjEuMTcxMzEwNDEzNi42MC4wLjA."
                         target="_blank"
                         rel="noreferrer noopener"
-                    >創業小聚</a
+                        >創業小聚</a
                     ></span
                 >
                 <span
@@ -319,11 +332,14 @@
                         href="https://fc.bnext.com.tw/?_gl=1*17nqxne*_ga*MTAwNjU1ODY3LjE3MTI5ODQ2NjI.*_ga_LJQ58J2DG7*MTcxMzEwMjQ2MC44LjEuMTcxMzEwNDEzNi42MC4wLjA."
                         target="_blank"
                         rel="noreferrer noopener"
-                    >未來商務</a
+                        >未來商務</a
                     ></span
                 >
             </p>
-            <p class="copyright">&copy; 2024 Business Next Media Corp. All Rights Reserved. 106 台北市大安區光復南路102號9樓 </p>
+            <p class="copyright">
+                &copy; 2024 Business Next Media Corp. All Rights Reserved. 106
+                台北市大安區光復南路102號9樓
+            </p>
         </footer>
     </body>
 </html>
