將課程資訊按鈕上連結並更新樣式

--- a/index.html
+++ b/index.html
@@ -236,22 +236,22 @@
                 </p>
                 <p>票價費用：</p>
                 <div class="lesson-price-box">
-                    <div class="lesson-price-cards">
+                    <a href="https://eventgo.bnextmedia.com.tw/event/view/e11241u6576af709b72d/" class="lesson-price-cards" target="_blank" rel="noreferrer noopener">
                         <h4>雙日報名最優惠</h4>
                         <span>NT.<strong>8,000</strong>/人</span>
-                    </div>
-                    <div class="lesson-price-cards">
+                    </a>
+                    <a href="https://eventgo.bnextmedia.com.tw/event/view/e11241u6576af709b72d/" class="lesson-price-cards" target="_blank" rel="noreferrer noopener">
                         <h4>單日‧早鳥優惠</h4>
                         <span>NT.<strong>4,320</strong>/人</span>
-                    </div>
-                    <div class="lesson-price-cards">
+                    </a>
+                    <a href="https://eventgo.bnextmedia.com.tw/event/view/e11241u6576af709b72d/" class="lesson-price-cards" target="_blank" rel="noreferrer noopener">
                         <h4>單日‧3人以上團報</h4>
                         <span>NT.<strong>4,000</strong>/人</span>
-                    </div>
-                    <div class="lesson-price-cards">
+                    </a>
+                    <a href="https://eventgo.bnextmedia.com.tw/event/view/e11241u6576af709b72d/" class="lesson-price-cards" target="_blank" rel="noreferrer noopener">
                         <h4>單日‧一般票</h4>
                         <span>NT.<strong>4,980</strong>/人</span>
-                    </div>
+                    </a>
                 </div>
                 <div class="lesson-price-ps">
                     <h3>
