更新p換行方式

--- a/index.html
+++ b/index.html
@@ -66,13 +66,11 @@
         <section class="recomm">
             <div>
                 <h2>
-                    管理學大師彼得‧
-                    杜拉克曾說：「組織的目的在於，使平凡人做不平凡事。」
+                    管理學大師彼得‧杜拉克曾說：「組織的目的在於，使平凡人做不平凡事。」
                 </h2>
                 <p>
                     一個卓越的領導者靠的絕不是頭銜，而是懂得用對方法，持續累積經驗，和團隊一起變強！
-                </p>
-                <p>
+                    <br />
                     帶人的技術課程連續 7 年好評開課，系統化拆解 1 對 1
                     指導重點，有效帶出得力部屬！
                 </p>
@@ -80,11 +78,9 @@
             <div class="feedback">
                 <h2>超過千人學員好評推薦！</h2>
                 <div class="recomm-carousel-cards">
-                    <p>新興員工觀念蠻前衛的，沒有足夠的經驗真的應付不來。</p>
                     <p>
-                        很高興在課程中，學習到很好的運用手腕，又不傷彼此自尊心，
-                    </p>
-                    <p>
+                        新興員工觀念蠻前衛的，沒有足夠的經驗真的應付不來。<br />
+                        很高興在課程中，學習到很好的運用手腕，又不傷彼此自尊心，<br />
                         又能達成工作目標，真是十全十美的作法。謝謝老師與承辦單位，謝謝。
                     </p>
                     <span>關鍵指導力/資通訊服務業/中高階主管</span>
@@ -236,19 +232,39 @@
                 </p>
                 <p>票價費用：</p>
                 <div class="lesson-price-box">
-                    <a href="https://eventgo.bnextmedia.com.tw/event/view/e11241u6576af709b72d/" class="lesson-price-cards" target="_blank" rel="noreferrer noopener">
+                    <a
+                        href="https://eventgo.bnextmedia.com.tw/event/view/e11241u6576af709b72d/"
+                        class="lesson-price-cards"
+                        target="_blank"
+                        rel="noreferrer noopener"
+                    >
                         <h4>雙日報名最優惠</h4>
                         <span>NT.<strong>8,000</strong>/人</span>
                     </a>
-                    <a href="https://eventgo.bnextmedia.com.tw/event/view/e11241u6576af709b72d/" class="lesson-price-cards" target="_blank" rel="noreferrer noopener">
+                    <a
+                        href="https://eventgo.bnextmedia.com.tw/event/view/e11241u6576af709b72d/"
+                        class="lesson-price-cards"
+                        target="_blank"
+                        rel="noreferrer noopener"
+                    >
                         <h4>單日‧早鳥優惠</h4>
                         <span>NT.<strong>4,320</strong>/人</span>
                     </a>
-                    <a href="https://eventgo.bnextmedia.com.tw/event/view/e11241u6576af709b72d/" class="lesson-price-cards" target="_blank" rel="noreferrer noopener">
+                    <a
+                        href="https://eventgo.bnextmedia.com.tw/event/view/e11241u6576af709b72d/"
+                        class="lesson-price-cards"
+                        target="_blank"
+                        rel="noreferrer noopener"
+                    >
                         <h4>單日‧3人以上團報</h4>
                         <span>NT.<strong>4,000</strong>/人</span>
                     </a>
-                    <a href="https://eventgo.bnextmedia.com.tw/event/view/e11241u6576af709b72d/" class="lesson-price-cards" target="_blank" rel="noreferrer noopener">
+                    <a
+                        href="https://eventgo.bnextmedia.com.tw/event/view/e11241u6576af709b72d/"
+                        class="lesson-price-cards"
+                        target="_blank"
+                        rel="noreferrer noopener"
+                    >
                         <h4>單日‧一般票</h4>
                         <span>NT.<strong>4,980</strong>/人</span>
                     </a>
