--- a/index.html
+++ b/index.html
@@ -56,7 +56,14 @@
             <div class="arrow"></div>
         </div>
         <header>
-            <img src="/assets/web_header.png" alt="" />
+            <a
+                href="https://eventgo.bnextmedia.com.tw/event/view/e11241u6576af709b72d/"
+                target="_blank"
+                rel="noreferrer noopener"
+            >
+                <img src="/assets/web_header.png" alt="限時優惠：課程八折起，報名加贈經理人月刊6期，點擊領取優惠" />
+            </a>
+
             <img
                 src="/assets/top-landscape.svg"
                 alt="帶人的技術：(1)教練領導學，(2)關鍵指導力。企業指定→主管養成計畫"
