進度到年度課表(section.annual)

--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
                 target="_blank"
                 rel="noreferrer noopener"
             >
-                <img src="/assets/web_header.png" alt="限時優惠：課程八折起，報名加贈經理人月刊6期，點擊領取優惠" />
+                <img
+                    src="/assets/web_header.png"
+                    alt="限時優惠：課程八折起，報名加贈經理人月刊6期，點擊領取優惠"
+                />
             </a>
 
             <img
@@ -315,7 +318,77 @@
                 </div>
             </div>
         </section>
-        <section class="empty"></section>
+        <section class="annual">
+            <div class="container">
+                <h2>帶人的技術 2024 年度課表全展開</h2>
+                <p>
+                    經理人精選2大管理培訓課程，結合理論與實務，<br />
+                    解密帶人心法，協助企業培訓潛力人才，全面提升領導戰力！
+                </p>
+                <table>
+                    <colgroup>
+                        <col id="col1" />
+                        <col id="col2" />
+                        <col id="col3" />
+                        <col id="col4" />
+                    </colgroup>
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th>第一梯</th>
+                            <th>第二梯</th>
+                            <th>第三梯</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th>
+                                <span class="white-arrow">→</span>
+                                教練領導學
+                            </th>
+                            <td><span class="date-eng">03/08</span></td>
+                            <td><span class="date-eng">05/31</span></td>
+                            <td><span class="date-eng">08/28</span></td>
+                        </tr>
+                        <tr>
+                            <th>
+                                <span class="white-arrow">→</span>
+                                關鍵指導力
+                            </th>
+                            <td><span class="date-eng">03/28</span></td>
+                            <td><span class="date-eng">06/28</span></td>
+                            <td><span class="date-eng">09/26</span></td>
+                        </tr>
+                        <tr class="annual-btn-row">
+                            <th></th>
+                            <td>
+                                <a href="javascript:void(0)" class="link-soldout">
+                                    <div>額滿完課</div>
+                                </a>
+                            </td>
+                            <td>
+                                <a
+                                    href="https://eventgo.bnextmedia.com.tw/event/detail/e11241u6576af709b72d?_gl=1*5pflq4*_ga*NTUwMzkyNzc2LjE3MTMxNjg2OTc.*_ga_383SSRZR6Z*MTcxMzI0NjcyMC42LjAuMTcxMzI0NjcyMC42MC4wLjA.*_ga_LJQ58J2DG7*MTcxMzI0NjcyMC42LjAuMTcxMzI0NjcyMC42MC4wLjA.*_ga_G9MHY2DC1W*MTcxMzI0NjcyMC42LjAuMTcxMzI0NjcyMC4wLjAuMA..&_ga=2.231136927.1890466293.1713168697-550392776.1713168697"
+                                    target="_blank"
+                                    rel="noreferrer noopener"
+                                >
+                                    <div>立即報名</div>
+                                </a>
+                            </td>
+                            <td>
+                                <a
+                                    href="https://eventgo.bnextmedia.com.tw/event/detail/e64738u6576af763003c?_gl=1*5pflq4*_ga*NTUwMzkyNzc2LjE3MTMxNjg2OTc.*_ga_383SSRZR6Z*MTcxMzI0NjcyMC42LjAuMTcxMzI0NjcyMC42MC4wLjA.*_ga_LJQ58J2DG7*MTcxMzI0NjcyMC42LjAuMTcxMzI0NjcyMC42MC4wLjA.*_ga_G9MHY2DC1W*MTcxMzI0NjcyMC42LjAuMTcxMzI0NjcyMC4wLjAuMA..&_ga=2.231136927.1890466293.1713168697-550392776.1713168697"
+                                    target="_blank"
+                                    rel="noreferrer noopener"
+                                >
+                                    <div>搶先預定</div>
+                                </a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
         <footer>
             <p>
                 <strong>Bnext Media 媒體群</strong>
