--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a href="#agenda"> 精彩課綱</a>
                 </li>
                 <li>
-                    <a href="#lesson-info"> 課程資訊</a>
+                    <a href="#course-info"> 課程資訊</a>
                 </li>
                 <li>
                     <a href="#"> 常見問題</a>
@@ -204,47 +204,49 @@
                 </div>
             </div>
         </section>
-        <section class="about-lesson">
-            <article>
-                <h2>課程重點搶先看</h2>
-                <!-- width="560"
+        <section class="about-course">
+            <div class="container">
+                <article>
+                    <h2>課程重點搶先看</h2>
+                    <!-- width="560"
                     height="315" -->
-                <iframe
-                    src="https://www.youtube-nocookie.com/embed/aQNPdGgZkJA?si=exboPfRxUhRZMIMQ"
-                    title="YouTube video player"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    referrerpolicy="strict-origin-when-cross-origin"
-                    allowfullscreen
-                ></iframe>
-            </article>
-            <article>
-                <header class="section-header">
-                    <h2>講師介紹</h2>
-                    <h3><em>- Speaker -</em></h3>
-                </header>
-                <img
-                    src="/assets/speaker.png"
-                    alt="講師陳煥庭的介紹：起初國際台灣分公司執行長"
-                />
-            </article>
+                    <iframe
+                        src="https://www.youtube-nocookie.com/embed/aQNPdGgZkJA?si=exboPfRxUhRZMIMQ"
+                        title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin"
+                        allowfullscreen
+                    ></iframe>
+                </article>
+                <article>
+                    <header class="section-header">
+                        <h2>講師介紹</h2>
+                        <h3><em>- Speaker -</em></h3>
+                    </header>
+                    <img
+                        src="/assets/speaker.png"
+                        alt="講師陳煥庭的介紹：起初國際台灣分公司執行長"
+                    />
+                </article>
+            </div>
         </section>
-        <section class="lesson-info" id="lesson-info">
+        <section class="course-info" id="course-info">
             <header class="section-header">
                 <h2>課程資訊</h2>
                 <h3><em>- Course -</em></h3>
             </header>
-            <div class="lesson-info-box">
+            <div class="course-info-box">
                 <p>活動日期：05.31 (五)、06.28 (五)； 09:30 ~ 17:00</p>
                 <p>
                     活動地點：張榮發基金會國際會議中心
                     <small>（臺北市中正區中山南路11號）</small>
                 </p>
                 <p>票價費用：</p>
-                <div class="lesson-price-box">
+                <div class="course-price-box">
                     <a
                         href="https://eventgo.bnextmedia.com.tw/event/view/e11241u6576af709b72d/"
-                        class="lesson-price-cards"
+                        class="course-price-cards"
                         target="_blank"
                         rel="noreferrer noopener"
                     >
@@ -253,7 +255,7 @@
                     </a>
                     <a
                         href="https://eventgo.bnextmedia.com.tw/event/view/e11241u6576af709b72d/"
-                        class="lesson-price-cards"
+                        class="course-price-cards"
                         target="_blank"
                         rel="noreferrer noopener"
                     >
@@ -262,7 +264,7 @@
                     </a>
                     <a
                         href="https://eventgo.bnextmedia.com.tw/event/view/e11241u6576af709b72d/"
-                        class="lesson-price-cards"
+                        class="course-price-cards"
                         target="_blank"
                         rel="noreferrer noopener"
                     >
@@ -271,7 +273,7 @@
                     </a>
                     <a
                         href="https://eventgo.bnextmedia.com.tw/event/view/e11241u6576af709b72d/"
-                        class="lesson-price-cards"
+                        class="course-price-cards"
                         target="_blank"
                         rel="noreferrer noopener"
                     >
@@ -279,7 +281,7 @@
                         <span>NT.<strong>4,980</strong>/人</span>
                     </a>
                 </div>
-                <div class="lesson-price-ps">
+                <div class="course-price-ps">
                     <h3>
                         【 05.31教練領導學 : 早鳥為05.23前 / 06.28關鍵指導力 :
                         早鳥為06.20前 】
@@ -289,7 +291,7 @@
                         本課程附教材、午餐並加贈《經理人月刊》6期，2024年7月號起算
                     </p>
                 </div>
-                <div class="lesson-btn-box">
+                <div class="course-btn-box">
                     <a
                         href="https://eventgo.bnextmedia.com.tw/event/view/e11241u6576af709b72d/?_ga=2.246930503.255895828.1712984664-100655867.1712984662&_gl=1*1sifkwe*_ga*MTAwNjU1ODY3LjE3MTI5ODQ2NjI.*_ga_LJQ58J2DG7*MTcxMzEwMjQ2MC44LjEuMTcxMzEwNDEzNi42MC4wLjA.*_ga_383SSRZR6Z*MTcxMzEwMjQ2MC43LjAuMTcxMzEwMjQ2NC41Ni4wLjA.*_ga_G9MHY2DC1W*MTcxMzEwMjQ2MC43LjAuMTcxMzEwMjQ2NC4wLjAuMA.."
                         target="_blank"
@@ -298,7 +300,7 @@
                         立即報名
                     </a>
                 </div>
-                <div class="lesson-details">
+                <div class="course-details">
                     <p>活動洽詢：02-8773-9808</p>
                     <br />
                     <p>
@@ -362,7 +364,10 @@
                         <tr class="annual-btn-row">
                             <th></th>
                             <td>
-                                <a href="javascript:void(0)" class="link-soldout">
+                                <a
+                                    href="javascript:void(0)"
+                                    class="link-soldout"
+                                >
                                     <div>額滿完課</div>
                                 </a>
                             </td>
@@ -389,6 +394,8 @@
                 </table>
             </div>
         </section>
+        <section class="extra-course"></section>
+
         <footer>
             <p>
                 <strong>Bnext Media 媒體群</strong>
