進度到更多課程(section.extra-course) 只差動畫效果

--- a/index.html
+++ b/index.html
@@ -394,7 +394,94 @@
                 </table>
             </div>
         </section>
-        <section class="extra-course"></section>
+        <section class="extra-course">
+            <header>
+                <h2>成為一流主管・必修課程</h2>
+                <p>新商業學校管理訓練課程 ⮕ 從個人到團隊全面升級領導力</p>
+            </header>
+            <div class="extra-course-card-box">
+                <div class="extra-course-cards">
+                    <figure>
+                        <figcaption>
+                            <h3>1 對 1引導部屬</h3>
+                            <div class="lightening-line"></div>
+                        </figcaption>
+                        <img
+                            src="/assets/extra-cour-p01.jpg"
+                            alt="1 對 1 引導部屬"
+                        />
+                    </figure>
+                    <div class="extra-course-info">
+                        <span class="date-eng">05/31</span>
+                        <h4>教練領導學｜帶人的技術</h4>
+                        <p>
+                            捨棄單向溝通方法，4關鍵有效激發部屬潛力，讓他自主達標
+                        </p>
+                        <a href="https://eventgo.bnextmedia.com.tw/event/view/e11241u6576af709b72d/?_ga=2.126795405.1890466293.1713168697-550392776.1713168697&_gl=1*i67cwf*_ga*NTUwMzkyNzc2LjE3MTMxNjg2OTc.*_ga_LJQ58J2DG7*MTcxMzM0MzYyMy4xMS4xLjE3MTMzNDQ1ODAuNjAuMC4w*_ga_383SSRZR6Z*MTcxMzM0MzYyMy4xMS4xLjE3MTMzNDQ1ODAuNjAuMC4w*_ga_G9MHY2DC1W*MTcxMzM0MzYyMy4xMS4xLjE3MTMzNDQ1ODAuMC4wLjA." target="_blank" rel="noreferrer noopener" class="extra-course-btns">立即報名</a>
+                    </div>
+                </div>
+                <div class="extra-course-cards">
+                    <figure>
+                        <figcaption>
+                            <h3>指導部屬與能力升級</h3>
+                            <div class="lightening-line"></div>
+                        </figcaption>
+                        <img
+                            src="/assets/extra-cour-p02.jpg"
+                            alt="指導部屬與能力升級"
+                        />
+                    </figure>
+                    <div class="extra-course-info">
+                        <span class="date-eng">06/28</span>
+                        <h4>關鍵指導力｜帶人的技術</h4>
+                        <p>
+                            部屬績效差又不改進？學會批評三部曲讓責備成為有效激勵！
+                        </p>
+                        <a href="https://eventgo.bnextmedia.com.tw/event/view/e11241u6576af709b72d/?_ga=2.126795405.1890466293.1713168697-550392776.1713168697&_gl=1*i67cwf*_ga*NTUwMzkyNzc2LjE3MTMxNjg2OTc.*_ga_LJQ58J2DG7*MTcxMzM0MzYyMy4xMS4xLjE3MTMzNDQ1ODAuNjAuMC4w*_ga_383SSRZR6Z*MTcxMzM0MzYyMy4xMS4xLjE3MTMzNDQ1ODAuNjAuMC4w*_ga_G9MHY2DC1W*MTcxMzM0MzYyMy4xMS4xLjE3MTMzNDQ1ODAuMC4wLjA." target="_blank" rel="noreferrer noopener" class="extra-course-btns">立即報名</a>
+                    </div>
+                </div>
+                <div class="extra-course-cards">
+                    <figure>
+                        <figcaption>
+                            <h3>團隊領導策略</h3>
+                            <div class="lightening-line"></div>
+                        </figcaption>
+                        <img
+                            src="/assets/extra-cour-p03.jpg"
+                            alt="團隊領導策略"
+                        />
+                    </figure>
+                    <div class="extra-course-info">
+                        <span class="date-eng">07/19</span>
+                        <h4>團隊決策與執行力｜全員邁向最佳績效</h4>
+                        <p>
+                            提升團隊的敏捷判斷素養與凝聚團隊行動力，靈活應對變化
+                        </p>
+                        <a href="https://eventgo.bnextmedia.com.tw/event/detail/e40259u65829158bf713/?_ga=2.104586880.1890466293.1713168697-550392776.1713168697&_gl=1*ovn6fo*_ga*NTUwMzkyNzc2LjE3MTMxNjg2OTc.*_ga_LJQ58J2DG7*MTcxMzM0MzYyMy4xMS4xLjE3MTMzNDQ1ODAuNjAuMC4w*_ga_383SSRZR6Z*MTcxMzM0MzYyMy4xMS4xLjE3MTMzNDQ1ODAuNjAuMC4w*_ga_G9MHY2DC1W*MTcxMzM0MzYyMy4xMS4xLjE3MTMzNDQ1ODAuMC4wLjA." target="_blank" rel="noreferrer noopener" class="extra-course-btns">看課程詳情</a>
+                    </div>
+                </div>
+                <div class="extra-course-cards">
+                    <figure>
+                        <figcaption>
+                            <h3>聰明應對常見管理難題</h3>
+                            <div class="lightening-line"></div>
+                        </figcaption>
+                        <img
+                            src="/assets/extra-cour-p04.jpg"
+                            alt="聰明應對常見管理難題"
+                        />
+                    </figure>
+                    <div class="extra-course-info">
+                        <span class="date-eng">04/23</span>
+                        <h4>缺工時代的破框領導力</h4>
+                        <p>
+                            團隊人才荒怎麼辦？十大管理情境帶你聽見員工留下好人才
+                        </p>
+                        <a href="https://edm.managertoday.com.tw/teamlead-toolbox/?utm_source=bshweb_class&utm_medium=intro&utm_campaign=2024q2teamlead" target="_blank" rel="noreferrer noopener" class="extra-course-btns">看課程詳情</a>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <footer>
             <p>
